# casper-rwa-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Odra.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
agent/: Cargo.toml  README.md  run_loop.sh
agent/src/: lib.rs
resources/: casper-test-contracts.toml
showcase/: QA_PACK.md  SLAGPLAN.md  deck.html  organizer_message_draft.txt
showcase/audio/: 00.aiff  01.aiff  02.aiff  03.aiff  04.aiff  05.aiff  06.aiff  07.aiff  08.aiff
showcase/build_hfc/: concat.txt
showcase/narration/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
src/: lib.rs  rwa_vault.rs
